Tips, TotalPoints, Pollen modified

--- a/src/pages/newEntry/tips/tips.html
+++ b/src/pages/newEntry/tips/tips.html
@@ -17,7 +17,7 @@
     <button (click)="pushHomePage()" ion-button secondary icon-left>
       <ion-icon name='close'></ion-icon>Abbrechen
     </button>
-    <button (click)="pushHomePage()" ion-button icon-right secondary>Weiter
+    <button (click)="pushHomePage()" ion-button icon-right secondary>Weiter zum Menu
       <ion-icon name="ios-arrow-forward"></ion-icon>
     </button>
 </ion-content>
