--- a/src/pages/newEntry/totalPoints/totalPoints.html
+++ b/src/pages/newEntry/totalPoints/totalPoints.html
@@ -17,6 +17,20 @@
 
   <p>Öffne eine Truhe und hole dir zusätzliche Punkte und einen Tipp.</p>
 
+  <ion-grid>
+    <ion-row justify-content-center>
+      <ion-col col-3>
+        <ion-icon name="briefcase" style="font-size:55px;color:yellow"></ion-icon>
+      </ion-col>
+      <ion-col col-3>
+          <ion-icon name="briefcase" style="font-size:55px;color:blue"></ion-icon>
+      </ion-col>
+      <ion-col col-3>
+         <ion-icon name="briefcase" style="font-size:55px;color:red"></ion-icon>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
   <button (click)="pushHomePage()" ion-button secondary icon-left>
     <ion-icon name='close'></ion-icon>Abbrechen
   </button>
