--- a/src/pages/pollen/pollen.html
+++ b/src/pages/pollen/pollen.html
@@ -40,13 +40,13 @@
 
             <ion-row>
               <ion-col>
-                <ion-icon name="ios-flower-outline" color="secondary"></ion-icon>
+                <ion-icon name="ios-flower-outline" style="color:green;font-size:35px;"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-flower-outline" color="secondary"></ion-icon>
+                <ion-icon name="ios-flower-outline" style="color:green;font-size:35px;"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-flower" style="color:red;"></ion-icon>
+                <ion-icon name="ios-flower" style="color:yellow;font-size:35px;"></ion-icon>
               </ion-col>
             </ion-row>
 
@@ -72,6 +72,7 @@
                 <ion-card-title>Wetter</ion-card-title>
               </ion-col>
             </ion-row>
+
             <ion-row>
               <ion-col>
                 Morgen
@@ -86,19 +87,19 @@
 
             <ion-row>
               <ion-col>
-                <ion-icon name="ios-cloud-outline"></ion-icon>
+                <ion-icon name="ios-cloud-outline" style="font-size:35px;"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-sunny-outline"></ion-icon>
+                <ion-icon name="ios-sunny-outline" style="font-size:35px;"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-moon-outline"></ion-icon>
+                <ion-icon name="ios-moon-outline" style="font-size:35px;"></ion-icon>
               </ion-col>
             </ion-row>
 
             <ion-row>
               <ion-col>
-                0°/-1°
+                2°/0°
               </ion-col>
               <ion-col>
                 4°/2°
@@ -137,13 +138,13 @@
 
             <ion-row>
               <ion-col>
-                <ion-icon name="ios-flower-outline" color="secondary"></ion-icon>
+                <ion-icon name="ios-flower-outline" style="color:yellow;font-size:35px;"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-flower"></ion-icon>
+                <ion-icon name="ios-flower" style="color:green;font-size:35px;"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-flower"></ion-icon>
+                <ion-icon name="ios-flower" style="color:orange;font-size:35px;"></ion-icon>
               </ion-col>
             </ion-row>
 
@@ -155,7 +156,7 @@
                 wenig Pollen
               </ion-col>
               <ion-col>
-                wenig Pollen
+                viel Pollen
               </ion-col>
             </ion-row>
           </ion-grid>
@@ -183,13 +184,13 @@
 
             <ion-row>
               <ion-col>
-                <ion-icon name="ios-cloud-outline"></ion-icon>
+                <ion-icon name="ios-cloud-outline" style="font-size:35px;"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-sunny-outline"></ion-icon>
+                <ion-icon name="ios-sunny-outline" style="font-size:35px;"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-moon-outline"></ion-icon>
+                <ion-icon name="ios-moon-outline" style="font-size:35px;"></ion-icon>
               </ion-col>
             </ion-row>
 
@@ -198,10 +199,10 @@
                 0°/-1°
               </ion-col>
               <ion-col>
-                4°/2°
+                4°/0°
               </ion-col>
               <ion-col>
-                2°/1°
+                1°/-2°
               </ion-col>
             </ion-row>
           </ion-grid>
@@ -235,13 +236,13 @@
 
             <ion-row>
               <ion-col>
-                <ion-icon name="ios-flower-outline" color="secondary"></ion-icon>
+                <ion-icon name="ios-flower-outline" style="color:green;font-size:35px;"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-flower-outline" color="secondary"></ion-icon>
+                <ion-icon name="ios-flower-outline" style="color:green;font-size:35px;"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-flower" color="twitter"></ion-icon>
+                <ion-icon name="ios-flower" style="color:yellow;font-size:35px;"></ion-icon>
               </ion-col>
             </ion-row>
 
@@ -281,13 +282,13 @@
 
             <ion-row>
               <ion-col>
-                <ion-icon name="ios-cloud-outline"></ion-icon>
+                <ion-icon name="ios-cloud-outline" style="font-size:35px;"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-sunny-outline"></ion-icon>
+                <ion-icon name="ios-rainy-outline" style="font-size:35px;"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-moon-outline"></ion-icon>
+                <ion-icon name="ios-moon-outline" style="font-size:35px;"></ion-icon>
               </ion-col>
             </ion-row>
 
