introduction page modified

--- a/src/pages/introduction/heightweight/heightweight.html
+++ b/src/pages/introduction/heightweight/heightweight.html
@@ -20,13 +20,13 @@
 
 
   <ion-item>
-    <ion-label color="primary">Grösse</ion-label>
-    <ion-input placeholder="in cm"></ion-input>
+    <ion-label>Grösse</ion-label>
+    <ion-input type="number" placeholder="in cm"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label color="primary">Gewicht</ion-label>
-    <ion-input placeholder="in kg"></ion-input>
+    <ion-label>Gewicht</ion-label>
+    <ion-input type="number" placeholder="in kg"></ion-input>
   </ion-item>
 
   <button (click)="pushHomePage()" ion-button secondary icon-left><ion-icon name='close'></ion-icon>Abbrechen</button>
