--- a/src/pages/introduction/introduction.html
+++ b/src/pages/introduction/introduction.html
@@ -14,7 +14,7 @@
       Hallo Tim
       </ion-card-title>
     <p>
-      Ich bin Dr. Ally, vielen Dank, dass Du mir mit Deinem Beitrag hilfst, Allergien zu untersuchen.
+      Ich bin Dr. Ally. Vielen Dank, dass Du mir mit Deinem Beitrag hilfst, Allergien zu untersuchen.
       Lass uns kurz Deine persönlichen Einstellungen zu speichern.
     </p>
   </ion-card-content>
