--- a/src/pages/introduction/finish/finish.html
+++ b/src/pages/introduction/finish/finish.html
@@ -16,6 +16,6 @@
 </ion-card>
   </p>
 
-<button (click)="pushHomePage()" ion-button secondary icon-left><ion-icon name='close'></ion-icon>Abbrechen</button>
 
-<button ion-button icon-right secondary (click)="pushHomePage()">Abschliessen<ion-icon name="ios-arrow-forward"></ion-icon></button>
+
+<button ion-button icon-right secondary (click)="pushTabsPage()">Abschliessen<ion-icon name="ios-arrow-forward"></ion-icon></button>
