Change Picture Dr. Ally

--- a/src/pages/introduction/remindertime/remindertime.html
+++ b/src/pages/introduction/remindertime/remindertime.html
@@ -7,7 +7,7 @@
 <ion-content padding>
   <p>
     <ion-card>
-<img class="full-image" src="assets/img/AllyAchtung.png"/>
+<img class="full-image" src="assets/img/AllyNormalKlein.png"/>
   <ion-card-content>
     <p>
 Ich bin da, um Dir zu helfen, Deine täglichen Einträge zu erfassen
