--- a/src/pages/introduction/heightweight/heightweight.html
+++ b/src/pages/introduction/heightweight/heightweight.html
@@ -7,7 +7,7 @@
 <ion-content padding>
   <p>
     <ion-card>
-  <img class="full-image" src="assets/img/AllyAchtung.png"/>
+  <img class="full-image" src="assets/img/AllyNormalKlein.png"/>
   <ion-card-content>
     <ion-card-title>
       </ion-card-title>
