Anpassungen an Fragen

--- a/src/pages/game/false1/false1.html
+++ b/src/pages/game/false1/false1.html
@@ -11,7 +11,7 @@
     <ion-card-content>
 
       <p>Leider ist diese Antwort falsch!</p>
-      <p>Die Richtige Antwort ist: Antihistaminika!</p>
+      <p>Die richtige Antwort ist: Antihistaminika!</p>
 
     </ion-card-content>
   </ion-card>
