--- a/src/pages/game/false2/false2.html
+++ b/src/pages/game/false2/false2.html
@@ -11,7 +11,7 @@
     <ion-card-content>
 
       <p>Leider ist diese Antwort falsch!</p>
-      <p>Heuschnupen ist keine ansteckende Krankheit.</p>
+      <p>Heuschnupfen ist keine ansteckende Krankheit.</p>
 
     </ion-card-content>
   </ion-card>
