--- a/src/pages/game/false4/false4.html
+++ b/src/pages/game/false4/false4.html
@@ -11,7 +11,7 @@
     <ion-card-content>
 
       <p>Leider ist diese Antwort falsch!</p>
-      <p>Gräser ist die häufigste Pollenalergie.</p>
+      <p>Gräser ist die häufigste Pollenallergie.</p>
 
     </ion-card-content>
   </ion-card>
