--- a/src/pages/game/right3/right3.html
+++ b/src/pages/game/right3/right3.html
@@ -12,7 +12,7 @@
 
       <p>Super Tim!</p>
       <p>Deine Antwort war korrekt - weiter so!</p>
-      <p>Du hast ein Punkte erzielt.</p>
+      <p>Du hast einen Punkt erzielt.</p>
 
     </ion-card-content>
   </ion-card>
