--- a/src/pages/newEntry/dateTime/dateTime.html
+++ b/src/pages/newEntry/dateTime/dateTime.html
@@ -19,11 +19,19 @@
         <ion-datetime displayFormat="DD MMM, HH:mm" [(ngModel)]="date" cancelText="Abbrechen" doneText="Speichern"></ion-datetime>
       </ion-item>
 
+      <ion-grid>
+        <ion-row>
+          <ion-col>
       <button (click)="pushHomePage()" ion-button secondary icon-left>
         <ion-icon name='close'></ion-icon>Abbrechen
       </button>
+    </ion-col>
+    <ion-col>
       <button (click)="pushComplaintsPage()" ion-button icon-right secondary>Weiter
         <ion-icon name="ios-arrow-forward"></ion-icon>
       </button>
+    </ion-col>
+  </ion-row>
+</ion-grid>
 
 </ion-content>
