--- a/src/pages/newEntry/newEntry.html
+++ b/src/pages/newEntry/newEntry.html
@@ -10,15 +10,23 @@
       <img class="full-image" src="assets/img/AllyNormal.png"/>
     <ion-card-content>
       <ion-card-title>Hallo Tim</ion-card-title>
-       <p>Mit jedem Eintrag den Du machst, hilfst Du uns die aktuelle Pollenbelastung besser analysieren zu können.</p>
+       <p>Mit jedem Eintrag, den Du machst, hilfst Du uns Pollenallergien besser analysieren zu können.</p>
     </ion-card-content>
     </ion-card>
 
-  <button (click)="pushHomePage()" ion-button secondary icon-left>
-    <ion-icon name='close'></ion-icon>Abbrechen
-  </button>
-  <button (click)="pushDateTimePage()" ion-button icon-right secondary>Weiter
-    <ion-icon name="ios-arrow-forward"></ion-icon>
-  </button>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <button (click)="pushHomePage()" ion-button secondary icon-left>
+          <ion-icon name='close'></ion-icon>Abbrechen
+        </button>
+      </ion-col>
+      <ion-col>
+        <button (click)="pushDateTimePage()" ion-button icon-right secondary>Weiter
+          <ion-icon name="ios-arrow-forward"></ion-icon>
+        </button>
+      </ion-col>
+    </ion-row>
+</ion-grid>
 
 </ion-content>
