--- a/src/pages/newEntry/medication/medication.html
+++ b/src/pages/newEntry/medication/medication.html
@@ -30,7 +30,7 @@
 
   <ion-list radio-group [(ngModel)]="questionMedication">
     <ion-item>
-      <ion-label>Vielleicht</ion-label>
+      <ion-label>Ja</ion-label>
       <ion-radio value="true" (ionSelect)="change(true)"></ion-radio>
     </ion-item>
     <ion-item>
@@ -50,12 +50,19 @@
     </ion-item>
   </ion-list-->
 
-
-  <button (click)="pushHomePage()" ion-button secondary icon-left>
-    <ion-icon name='close'></ion-icon>Abbrechen
-  </button>
-  <button (click)="pushTotalPointsPage()" (click)="presentToast()" ion-button icon-right secondary>Weiter
-    <ion-icon name="ios-arrow-forward"></ion-icon>
-  </button>
+  <ion-grid >
+    <ion-row>
+      <ion-col>
+        <button (click)="pushHomePage()" ion-button secondary icon-left>
+          <ion-icon name='close'></ion-icon>Abbrechen
+        </button>
+      </ion-col>
+      <ion-col>
+        <button (click)="pushTotalPointsPage()" (click)="presentToast()" ion-button icon-right secondary>Weiter
+          <ion-icon name="ios-arrow-forward"></ion-icon>
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
