--- a/src/pages/newEntry/tips/tips.html
+++ b/src/pages/newEntry/tips/tips.html
@@ -11,13 +11,22 @@
     <ion-card-title>Mein Tipp</ion-card-title>
          <p>Halte Dich wenig draussen auf.</p>
          <p>Wasche Dir täglich die Haare.</p>
-       </ion-card-content>
-       </ion-card>
+    </ion-card-content>
+  </ion-card>
 
-    <button (click)="pushHomePage()" ion-button secondary icon-left>
-      <ion-icon name='close'></ion-icon>Abbrechen
-    </button>
-    <button (click)="pushHomePage()" ion-button icon-right secondary>Weiter zum Menu
-      <ion-icon name="ios-arrow-forward"></ion-icon>
-    </button>
+  <ion-grid>
+    <ion-row>
+      <!--ion-col>
+        <button (click)="pushHomePage()" ion-button secondary icon-left>
+          <ion-icon name='close'></ion-icon>Abbrechen
+        </button>
+      </ion-col-->
+      <ion-col col-1>
+        <button (click)="pushHomePage()" ion-button icon-right secondary>Abschliessen
+          <ion-icon name="ios-arrow-forward"></ion-icon>
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
