--- a/src/pages/overview/overview.html
+++ b/src/pages/overview/overview.html
@@ -4,11 +4,11 @@
   </ion-navbar>
 </ion-header>
 
-<ion-header>
+<!--ion-header>
   <ion-navbar>
     <ion-title>Übersicht</ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header-->
 
 <ion-content padding>
   <ion-segment [(ngModel)]="season" color="primary">
