Changes in game

--- a/src/pages/game/right2/right2.html
+++ b/src/pages/game/right2/right2.html
@@ -17,7 +17,7 @@
     </ion-card-content>
   </ion-card>
 
-  <button (click)="onClick()" ion-button secondary icon-left>
+  <button (click)="pushHomePage()" ion-button secondary icon-left>
     <ion-icon name='close'></ion-icon>Abbrechen
   </button>
 
