--- a/src/pages/game/right4/right4.html
+++ b/src/pages/game/right4/right4.html
@@ -17,11 +17,7 @@
     </ion-card-content>
   </ion-card>
 
-  <button (click)="onClick()" ion-button secondary icon-left>
-    <ion-icon name='close'></ion-icon>Abbrechen
-  </button>
-
-  <button (click)="onClick()" ion-button icon-right secondary>Weiter
+  <button (click)="onClick()" ion-button icon-right secondary>Abschliessen
     <ion-icon name="ios-arrow-forward"></ion-icon>
   </button>
 
