--- a/src/pages/game/right1/right1.html
+++ b/src/pages/game/right1/right1.html
@@ -12,12 +12,12 @@
 
       <p>Super Tim!</p>
       <p>Deine Antwort war korrekt - weiter so!</p>
-      <p>Du hast zwei Punkte erzielt.</p>
+      <p>Du hast einen Punkt erzielt.</p>
 
     </ion-card-content>
   </ion-card>
 
-  <button (click)="onClick()" ion-button secondary icon-left>
+  <button (click)="pushHomePage()" ion-button secondary icon-left>
     <ion-icon name='close'></ion-icon>Abbrechen
   </button>
 
