--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -10,7 +10,7 @@
 
     <ion-row>
         <ion-col>
-            <img class="ally" src="assets/images/tim-ally.jpg" style="float:right;" alt="Lights" style="width:30%;max-width:400px">
+            <img class="ally" src="assets/img/tim-ally.jpg" style="float:right;" style="width:30%;max-width:400px">
         </ion-col>
     </ion-row>
 
@@ -76,7 +76,7 @@
         </ion-col>
 
         <ion-col>
-            <img src="assets/images/pokal-ally.png" style="float:right;" alt="Lights" style="width:30%;max-width:400px">
+            <img src="assets/img/pokal-ally.png" style="float:right;" style="width:30%;max-width:400px">
         </ion-col>
 
     </ion-row>
