Modify User Page

--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-navbar>
         <ion-title>
-            Pinnwand
+            Profile
         </ion-title>
     </ion-navbar>
 </ion-header>
@@ -49,7 +49,7 @@
                 <p>Tim</p>
             </div>
             <div>
-                <p>01.04.1991</p>
+                <p>21.06.1991</p>
             </div>
             <div>
                 <p>70 kg</p>
@@ -103,7 +103,7 @@
 
         <ion-row>
             <ion-col>
-                <p>Amasteuer Stufe 1</p>
+                <p>Amateur Stufe 1</p>
             </ion-col>
         </ion-row>
     </ion-row>
