--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Pinnwand" tabIcon="clipboard"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Benutzer" tabIcon="person"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Profile" tabIcon="person"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Einstellungen" tabIcon="settings"></ion-tab>
   
 </ion-tabs>
