--- a/src/pages/newEntry/tips/tips.html
+++ b/src/pages/newEntry/tips/tips.html
@@ -16,13 +16,8 @@
 
   <ion-grid>
     <ion-row>
-      <!--ion-col>
-        <button (click)="pushHomePage()" ion-button secondary icon-left>
-          <ion-icon name='close'></ion-icon>Abbrechen
-        </button>
-      </ion-col-->
-      <ion-col col-1>
-        <button (click)="pushHomePage()" ion-button icon-right secondary>Abschliessen
+      <ion-col text-center>
+        <button (click)="pushHomePage()" ion-button icon-right secondary style="height:36px;width:130px">Abschliessen
           <ion-icon name="ios-arrow-forward"></ion-icon>
         </button>
       </ion-col>
