--- a/src/pages/newEntry/complaints/complaints.html
+++ b/src/pages/newEntry/complaints/complaints.html
@@ -10,6 +10,7 @@
     <img class="full-image" src="assets/img/AllySauer.png"/>
   <ion-card-content>
     <p>Gib bitte spontan an, wie stark Deine Beschwerden sind?</p>
+     <ion-icon (click)="showInfoBeschwerden()" name="md-information-circle"></ion-icon>
   </ion-card-content>
   </ion-card>
 
@@ -40,13 +41,13 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col>
-        <button (click)="pushHomePage()" ion-button secondary icon-left>
+      <ion-col text-center>
+        <button (click)="pushHomePage()" ion-button secondary icon-left style="height:36px;width:130px">
           <ion-icon name='close'></ion-icon>Abbrechen
         </button>
       </ion-col>
-      <ion-col>
-        <button (click)="pushPhysicalActivityPage()" ion-button icon-right secondary>Weiter
+      <ion-col text-center>
+        <button (click)="pushPhysicalActivityPage()" ion-button icon-right secondary style="height:36px;width:130px">Weiter
           <ion-icon name="ios-arrow-forward"></ion-icon>
         </button>
       </ion-col>
