--- a/src/pages/newEntry/dateTime/dateTime.html
+++ b/src/pages/newEntry/dateTime/dateTime.html
@@ -21,17 +21,17 @@
 
       <ion-grid>
         <ion-row>
-          <ion-col>
-      <button (click)="pushHomePage()" ion-button secondary icon-left>
-        <ion-icon name='close'></ion-icon>Abbrechen
-      </button>
-    </ion-col>
-    <ion-col>
-      <button (click)="pushComplaintsPage()" ion-button icon-right secondary>Weiter
-        <ion-icon name="ios-arrow-forward"></ion-icon>
-      </button>
-    </ion-col>
-  </ion-row>
-</ion-grid>
+          <ion-col text-center>
+            <button (click)="pushHomePage()" ion-button secondary icon-left style="height:36px;width:130px">
+              <ion-icon name='close'></ion-icon>Abbrechen
+            </button>
+          </ion-col>
+          <ion-col text-center>
+            <button (click)="pushComplaintsPage()" ion-button icon-right secondary style="height:36px;width:130px">Weiter
+              <ion-icon name="ios-arrow-forward"></ion-icon>
+            </button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
 
 </ion-content>
