--- a/src/pages/newEntry/newEntry.html
+++ b/src/pages/newEntry/newEntry.html
@@ -16,13 +16,13 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col>
-        <button (click)="pushHomePage()" ion-button secondary icon-left>
+      <ion-col text-center>
+        <button (click)="pushHomePage()" ion-button secondary icon-left style="height:36px;width:130px">
           <ion-icon name='close'></ion-icon>Abbrechen
         </button>
       </ion-col>
-      <ion-col>
-        <button (click)="pushDateTimePage()" ion-button icon-right secondary>Weiter
+      <ion-col text-center>
+        <button (click)="pushDateTimePage()" ion-button icon-right secondary style="height:36px;width:130px">Weiter
           <ion-icon name="ios-arrow-forward"></ion-icon>
         </button>
       </ion-col>
