Page TotalPoints modified

--- a/src/pages/newEntry/totalPoints/totalPoints.html
+++ b/src/pages/newEntry/totalPoints/totalPoints.html
@@ -9,12 +9,11 @@
   <ion-card>
     <img class="full-image" src="assets/img/AllySuper.png"/>
   <ion-card-content>
-  <p>Vielen Dank! Du hast soeben einen Punkt erhalten.</p>
-  <!--p>Ich habe Deine Daten analysiert. Deine Beschwerden entsprechen
-         am ehesten einer Gräserpollenallergie!</p-->
-  <p>Öffne eine Truhe und hole Dir zusätzliche Punkte und einen Tipp.</p>
-       </ion-card-content>
-       </ion-card>
+      <ion-card-title>Geschafft!</ion-card-title>
+    <p>Vielen Dank! Du hast soeben einen Punkt erhalten.</p>
+    <p>Öffne eine Truhe und hole Dir zusätzliche Punkte und einen Tipp.</p>
+   </ion-card-content>
+   </ion-card>
 
 
 
