--- a/src/pages/community/community.html
+++ b/src/pages/community/community.html
@@ -5,9 +5,9 @@
 </ion-header>
 
 <ion-content padding>
-  <div><label>Augenbeschwerden&nbsp;&nbsp;&nbsp;</label><img src="../assets/img/roterPunkt.png"></div>
-  <div><label>Nasenbeschwerden&nbsp;&nbsp;&nbsp;</label><img src="../assets/img/blauerPunkt.png"></div>
-  <div><label>Atembeschwerden&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label><img src="../assets/img/gruenerPunkt.png"></div>
+  <div><label>Augenbeschwerden&nbsp;&nbsp;&nbsp;</label><img src="../assets/img/blauerPunkt.png"></div>
+  <div><label>Nasenbeschwerden&nbsp;&nbsp;&nbsp;</label><img src="../assets/img/grauerPunkt.png"></div>
+  <div><label>Atembeschwerden&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label><img src="../assets/img/grünerPunkt.png"></div>
   <ion-icon #info (click)="showExplanation()" name="md-information-circle"></ion-icon>
   <div #map id="my-map"></div>
 </ion-content>
