Add Points to HomePage

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content padding>
-<img class="displayed" src="assets/img/LogoAlly.png"/>
+<img class="displayed" width="30" height="50" src="assets/img/LogoAlly.png"/>
 <ion-content padding>
   <button ion-button block (click)="pushNewEntryPage()">
     Neuer Eintrag</button>
@@ -19,4 +19,14 @@
       Game</button>
     <button ion-button block (click)="pushIntroductionPage()">
         Einführung</button>
+    <ion-card style="border: 3px solid #550A21">
+    <h6>&nbsp;</h6>
+    <h6 style="color:#003c00" text-center>Aktueller Stand:</h6>
+    <h6>&nbsp;</h6>
+    <h1 style="color:#550A21; font-weight:bold" text-center>40 Punkte</h1>
+    <h6>&nbsp;</h6>
+    <h6 style="color:#003c00" text-center>Noch 128 Punkte bis zu Deiner Belohnung:</h6>
+    <h3 style="color:#003c00" text-center>>>> Gratis-Allergietest <<<</h3>
+    <h6>&nbsp;</h6>
+  </ion-card>
 </ion-content>
