--- a/src/pages/game/game.html
+++ b/src/pages/game/game.html
@@ -21,6 +21,12 @@
     </ion-card-content>
   </ion-card>
 
-  <button ion-button (click)="onNext1()">Zum Spiel</button>
+  <ion-grid>
+    <ion-row>
+      <ion-col text-center>
+        <button ion-button (click)="onNext1()" style="height:36px;width:130px">Zum Spiel</button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
