--- a/src/pages/game/false3/false3.html
+++ b/src/pages/game/false3/false3.html
@@ -16,12 +16,20 @@
     </ion-card-content>
   </ion-card>
 
-  <button (click)="pushHomePage()" ion-button secondary icon-left>
-    <ion-icon name='close'></ion-icon>Abbrechen
-  </button>
+  <ion-grid>
+    <ion-row>
+      <ion-col text-center>
+        <button (click)="pushHomePage()" ion-button secondary icon-left style="height:36px;width:130px">
+          <ion-icon name='close'></ion-icon>Abbrechen
+        </button>
+      </ion-col>
+      <ion-col text-center>
+        <button (click)="onClick()" ion-button icon-right secondary style="height:36px;width:130px">Weiter
+          <ion-icon name="ios-arrow-forward"></ion-icon>
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
-  <button (click)="onClick()" ion-button icon-right secondary>Weiter
-    <ion-icon name="ios-arrow-forward"></ion-icon>
-  </button>
 
 </ion-content>
