--- a/src/pages/game/right4/right4.html
+++ b/src/pages/game/right4/right4.html
@@ -1,7 +1,7 @@
 <ion-header padding class="quiz-title">
 
     <ion-title>Quiz</ion-title>
-  
+
   </ion-header>
 
 <ion-content padding>
@@ -17,8 +17,14 @@
     </ion-card-content>
   </ion-card>
 
-  <button (click)="onClick()" ion-button icon-right secondary>Abschliessen
-    <ion-icon name="ios-arrow-forward"></ion-icon>
-  </button>
+  <ion-grid>
+    <ion-row>
+      <ion-col text-center>
+        <button (click)="onClick()" ion-button icon-right secondary style="height:36px;width:130px">Abschliessen
+          <ion-icon name="ios-arrow-forward"></ion-icon>
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
