--- a/src/pages/introduction/finish/finish.html
+++ b/src/pages/introduction/finish/finish.html
@@ -16,6 +16,10 @@
 </ion-card>
   </p>
 
-
-
-<button ion-button icon-right secondary (click)="pushTabsPage()">Abschliessen<ion-icon name="ios-arrow-forward"></ion-icon></button>
+  <ion-grid>
+    <ion-row>
+      <ion-col text-center>
+        <button ion-button icon-right secondary (click)="pushTabsPage()" style="height:36px;width:130px">Abschliessen<ion-icon name="ios-arrow-forward"></ion-icon></button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
