--- a/src/pages/introduction/reward/reward.html
+++ b/src/pages/introduction/reward/reward.html
@@ -34,6 +34,13 @@
       </ion-item>
     </ion-list>
 
-<button (click)="pushHomePage()" ion-button secondary icon-left><ion-icon name='close'></ion-icon>Abbrechen</button>
-
-<button ion-button icon-right secondary (click)="pushHeightWeightPage()">Weiter<ion-icon name="ios-arrow-forward"></ion-icon></button>
+    <ion-grid>
+      <ion-row>
+        <ion-col text-center>
+          <button (click)="pushHomePage()" ion-button secondary icon-left style="height:36px;width:130px"><ion-icon name='close'></ion-icon>Abbrechen</button>
+        </ion-col>
+        <ion-col text-center>
+          <button ion-button icon-right secondary (click)="pushHeightWeightPage()" style="height:36px;width:130px">Weiter<ion-icon name="ios-arrow-forward"></ion-icon></button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
